force-app/main/default/objects/Estimation_Item__c/Estimation_Item__c.object-meta.xml
<CustomObject>
    <label>Estimation Item</label>
    <nameField>
        <label>EO Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>