force-app/main/default/objects/Estimation_Item__c/fields/ES_Desc_6form__c.field-meta.xml
<CustomField>
    <fullName>ES_Desc_6form__c</fullName>
    <formula>ES_Desc_text_1__c &amp; 
IF(NOT(ISBLANK( ES_Desc_text_2__c )),  ES_Desc_text_2__c , &quot;&quot;) &amp; 
IF(NOT(ISBLANK( ES_Desc_text_3__c )),  ES_Desc_text_3__c , &quot;&quot;) &amp; 
IF(NOT(ISBLANK( ES_Desc_text_4__c )),  ES_Desc_text_4__c , &quot;&quot;) &amp; 
IF(NOT(ISBLANK( ES_Desc_text_5__c )),  ES_Desc_text_5__c , &quot;&quot;) &amp; 
IF(NOT(ISBLANK( ES_Desc_text_6__c )),  ES_Desc_text_6__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Desc 6form</label>
    <type>Text</type>
</CustomField>