force-app/main/default/objects/Estimation_Item__c/fields/ES_Desc_text_3__c.field-meta.xml
<CustomField>
    <fullName>ES_Desc_text_3__c</fullName>
    <label>ES Desc text 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>