force-app/main/default/objects/Estimation_Item__c/fields/Estimation__c.field-meta.xml
<CustomField>
    <fullName>Estimation__c</fullName>
    <label>Estimation</label>
    <referenceTo>Estimation__c</referenceTo>
    <relationshipLabel>Estimation</relationshipLabel>
    <relationshipName>Estimation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>