force-app/main/default/objects/Estimation_Item__c/fields/Final_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount_Amount__c</fullName>
    <formula>IF(
ISPICKVAL(Discount_Type__c, &quot;Amount&quot;),
Discount_Amount__c,
IF(
ISPICKVAL(Discount_Type__c, &quot;Percentage&quot;),
( Total_Price__c * Discount_Percentage__c),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>