force-app/main/default/objects/Estimation_Item__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Used to store the position of Estimation items</description>
    <label>Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>