force-app/main/default/objects/Estimation_Item__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>