force-app/main/default/objects/Estimation_Item__c/fields/Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Code__c</fullName>
    <description>Sales order Code</description>
    <label>Order Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>