force-app/main/default/objects/Estimation_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Estimation Item links to product</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Estimation Products</relationshipLabel>
    <relationshipName>Estimation_Products</relationshipName>
    <type>Lookup</type>
</CustomField>