force-app/main/default/objects/Estimation_Item__c/fields/S_NO__c.field-meta.xml
<CustomField>
    <fullName>S_NO__c</fullName>
    <label>S NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>