force-app/main/default/objects/Estimation_Item__c/fields/Standard_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Rate__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>It is the input field for giving standard rate.</description>
    <label>Standard Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>