force-app/main/default/objects/Estimation_Item__c/fields/Standard_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Rate_Amount__c</fullName>
    <formula>Unit_Price__c *  Standard_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>