force-app/main/default/objects/Estimation_Item__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to tag the tax for the estimation item</description>
    <label>Tax</label>
    <referenceTo>Tax__c</referenceTo>
    <relationshipLabel>Estimation Items</relationshipLabel>
    <relationshipName>Estimation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>