force-app/main/default/objects/Estimation_Item__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <description>This field shows the tax % of Estimation item.</description>
    <label>Tax Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>