force-app/main/default/objects/Estimation_Item__c/fields/Total_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Tax__c</fullName>
    <formula>Total_Price_with_Discount__c  +  Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>