force-app/main/default/objects/Estimation_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>CASE( Unit_of_Measure__c , &quot;Each&quot;,  Quantity__c  *  Unit_Price__c , &quot;Dozen&quot;,  Quantity__c  *  Unit_Price__c  * 12,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>