force-app/main/default/objects/Estimation_Item__c/fields/Total_Price_with_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_with_Discount__c</fullName>
    <formula>Total_Price__c  - 
        IF(
            ISPICKVAL(Discount_Type__c, &quot;Amount&quot;), 
            Discount_Amount__c, 
            IF(
                ISPICKVAL(Discount_Type__c, &quot;Percentage&quot;), 
                ( Total_Price__c * Discount_Percentage__c), 
                0
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price with Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>